[project]
name = "benny"
version = "0.0.1"
authors = [
    { name="Michael Kielstra" }
]
description = "A dispatcher for choosing which subclass to call based on a serializable key."
requires-python = ">=3.7"
classifiers =  [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
